# toy-mvo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mvo  mvo.cbp
include/: constants.h  features.h  loadData.h  processing.h
src/: features.cpp  loadData.cpp  main.cpp  processing.cpp
